src/components/Analyze/DifferentiaExpAnalysisResults/D3Graphics/D3GraphStyles.css
:root {
  --background-color: #ffffff;
  --text-color: #333333;
  --axis-color: #000000;
  --dot-color: gray;
  --sigfold-dot-color: #007bff;
  --sig-dot-color: #ff5733;
  --fold-dot-color: rgb(30, 255, 0);
  --tooltip-background-color: #ffffff;
  --tooltip-border-color: #cccccc;
  --tooltip-text-color: #000000;
  --slider-track-color: #dddddd;
  --slider-thumb-color: #007bff;
  --button-background-color: #007bff;
  --button-text-color: #ffffff;
  --button-border-color: #0056b3;
  --button-hover-background-color: #0056b3;
}
.d3Graph {
  font-family: Lato;
}

body {
  overflow-y: hidden !important;
}

.tooltip {
  position: absolute;
  z-index: 999; /* Ensure tooltip appears above other elements */
  padding: 8px;
  background-color: var(--tooltip-background-color);
  border: 1px solid var(--tooltip-border-color);
  color: var(--tooltip-text-color);
  border-radius: 4px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  opacity: 1;
}

.dot {
  fill: var(--dot-color);
  stroke: none;
}

.dot.sigfold {
  fill: var(--sigfold-dot-color);
}

.dot.sig {
  fill: var(--sig-dot-color);
}

.dot.fold {
  fill: var(--fold-dot-color);
}

/* Significance threshold line */
.threshold {
  stroke: #000000;
  stroke-opacity: 0.9;
  &.bold {
    stroke-dasharray: none;
  }
}

.legend .legend-item text {
  font-family: Lato;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

.zoom {
  cursor: move;
  fill: none;
  pointer-events: all;
}

#zoom-slider-container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 20px;

  .sleek-slider {
    -webkit-appearance: none;
    appearance: none;
    width: 50%;
    height: 8px;
    background: var(--slider-track-color);
    outline: none;
    opacity: 0.8;
    transition: opacity 0.2s;
    border-radius: 4px;
  }

  .sleek-slider:hover {
    opacity: 1;
  }

  .sleek-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    height: 5px;
    width: 5px;
    background: var(--slider-thumb-color);
    cursor: pointer;
    border-radius: 50%;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  }

  .sleek-slider::-moz-range-thumb {
    height: 5px;
    width: 5px;
    background: var(--slider-thumb-color);
    cursor: pointer;
    border-radius: 50%;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  }
}

.reset-button-container {
  position: absolute;
}

.reset-button {
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  border: 1px solid var(--button-border-color);
  font-size: 1em;
  padding: 6% 14%;
  /* margin-right: 8px; */
  border-radius: 5px;
  cursor: pointer;
  /* transition: var(--button-background-color) 0.3s; */
  z-index: -1;
}

.reset-button:hover {
  background-color: var(--button-hover-background-color);
}

#statParaTest {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;

  .axis {
    font-size: 2.7em;
    font-weight: bold;
    fill: var(--axis-color);
  }
  text {
    font-size: 2.2em;
  }
  .threshold {
    stroke-width: 3px;
  }
}

#chart.volcano {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /*Add clip path for dots and threshold lines to ensure they arent drawn if outside the clip box*/
  .circlesContainer {
    clip-path: url(#clip);
  }

  .thresholdLines {
    clip-path: url(#clip);
  }
  .axis path,
  .tick line,
  .tick text {
    stroke: #000000;
    stroke-width: 0.5px;
    stroke-opacity: 0.5;
  }

  .tick text {
    fill: #000000;
  }

  .label {
    fill: #000000;
    font-weight: 700;
    font-size: 12px;
  }
}

#PCATest {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  .axis {
    font-size: 1.5em;
    font-weight: bold;
    fill: var(--axis-color);
  }
  .ellipse {
    stroke: black;
    stroke-width: 1.5px;
  }

  text {
    font-size: 1em;
  }
  #zoom-slider-container {
    margin-top: 10px;
  }
}

#vennContainer {
  #venn {
    width: 700px;
    height: 500px;
    position: relative;
  }
  .venn-circle text {
    font-family: Lato;
    font-size: 15px;
  }
  .group-info,
  .group-info-special {
    margin-top: 20px;
    font-size: 1px;
    color: black;
    z-index: 1000;
    position: absolute;
    top: 0px;
    right: 0px;
    font-family: Lato;
  }

  .group-info p,
  .group-info-special p {
    margin: 5px 0;
    cursor: pointer;
    color: black;
    z-index: 1000;
    font-family: Lato;
  }

  .label {
    height: 28px;
    padding: 8px 8px 8px 0;
    font-size: 16px;
    font-weight: 700;
    letter-spacing: 0.4px;
    width: 100%;
    display: block;
    text-transform: uppercase;
    cursor: pointer;
    color: #696969;
    /* background: #f6f8fa;  */
  }

  div.ag-center-cols-container {
    width: 100%;
    border-left: 1px gray solid;
    border-right: 1px gray solid;
  }

  div.ag-cell a {
    margin-left: 1.5em;
  }
}

#FoldChangeGraph {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;

  text {
    font-size: 2.2em;
  }

  .axis {
    font-size: 2.7em;
    font-weight: bold;
    fill: var(--axis-color);
  }

  .xAxis text {
    display: none;
  }
  .xAxis .tick {
    display: none;
  }
}

#normChart {
  body {
    font-family: Arial, sans-serif;
    margin: 10px;
  }

  .container {
    max-width: 800px;
    margin: 0 auto;
  }

  h1 {
    text-align: center;
  }

  h2 {
    margin: 20px 0 0 0;
    text-align: left;
  }

  .plot-section {
    display: flex;
    justify-content: space-between;
  }

  .chart-section {
    flex: 1;
    margin-right: 10px; /*Adjust spacing between sections as needed */
  }

  .chart {
    width: 100%;
    height: 420px; /* Adjust height as needed */
    border: 1px solid #ccc;
    display: block; /* Ensures the SVG fills its container */
    margin: 0 auto 20px auto; /* Centers the SVG horizontally and adds bottom margin */
  }

  .circle-point {
    stroke: steelblue;
    stroke-width: 2;
    pointer-events: all;
    cursor: pointer;
  }

  .box {
    fill: white;
    stroke: #000;
    stroke-width: 1.5px;
  }

  .median {
    stroke: red;
    stroke-width: 1.5px;
  }

  .whisker,
  .min-line,
  .max-line {
    stroke: #000;
    stroke-width: 1.5px;
  }

  .axis--x path {
    display: none;
  }

  #boxplots {
    width: 100%;
    height: auto;
    overflow-x: auto;
  }

  .chart-section .chart svg {
    width: 100%;
    height: 100%;
    border: 1px solid #ccc;
    display: block;
    margin: 0 auto;
  }

  .chart-section .box-plot svg {
    width: 100%;
    height: 100%;
    border: 2px solid #ccc;
    display: block;
    margin: 0 auto;
  }

  .input-label {
    font-weight: bold;
    margin-right: 10px;
    font-size: 16px;
    color: #333;
  }

  .input-number {
    padding: 5px;
    font-size: 14px;
    border: 1px solid #ccc;
    border-radius: 4px;
    width: 60px;
  }

  .input-number:focus {
    border-color: #66afe9;
    outline: none;
  }

  .box-plot {
    margin-top: 20px;
  }
}
.barchart-container {
  width: 90%;
  height: 100%;
}

.ridgechart-container svg {
  width: 900px;
  height: 800px;
}

